--- a/css/styles_categories.css
+++ b/css/styles_categories.css
@@ -169,3 +169,17 @@
     background-color: var(--color-white);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
 }
+.add-cart {
+    margin-top: 10px;
+}
+.add-cart button {
+    padding:4px;
+    border: solid 1px transparent;
+    border-radius: 7px;
+    width: 40%;
+    color: white;
+    background-color: #eb7f2d;
+}
+.add-cart button:hover {
+    background-color: #d15d05
+} 
